🐛 Fixed issues on mobile responsive UI

--- a/packages/react-app/src/components/CollaterizationIndicator/styles.css
+++ b/packages/react-app/src/components/CollaterizationIndicator/styles.css
@@ -48,8 +48,7 @@
   position: relative;
   width: 8.75rem;
   height: 8.75rem;
-  margin: 0 auto;
-  margin-bottom: 1.5rem;
+  margin: 24px auto;
 }
 
 .bg-chart {
