--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -598,6 +598,9 @@ aside.svelte-rntogh {
     margin-top: 4px;
     display: block;
   }
+  .section-title {
+    margin-bottom: 16px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
