--- a/packages/react-app/src/screens/Dashboard/ManagePosition/styles.css
+++ b/packages/react-app/src/screens/Dashboard/ManagePosition/styles.css
@@ -285,6 +285,13 @@
   .toggle-button .button .knobs:before {
     border-radius: 4px;
   }
+
+  .toggle-button .button .knobs .toggle-options span,
+  .toggle-button [data-toggle]:after {
+    font-weight: 600;
+    font-size: 12px;
+  }
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
