--- a/packages/react-app/src/screens/Dashboard/MyPositions/styles.css
+++ b/packages/react-app/src/screens/Dashboard/MyPositions/styles.css
@@ -270,6 +270,7 @@
 
   .adding-position {
     height: 64px;
+    border: 1px dashed var(--fujiColor);
   }
 
   .positions .position-about {
